poprawa w get user projects